--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,15 +45,52 @@
     <Analyzer Include="D:\Program Files\UnityHub\Unity\2022.3.38f1c1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Zomby\IZAttacked.cs" />
+    <Compile Include="Assets\Scripts\Plant\Pea.cs" />
+    <Compile Include="Assets\Scripts\IPAttacked.cs" />
     <Compile Include="Assets\Scripts\Ultities\NewSingleton.cs" />
-    <Compile Include="Assets\Scripts\Pea.cs" />
+    <Compile Include="Assets\GetFire.cs" />
+    <Compile Include="Assets\Scripts\CardSlot\GetSunNum.cs" />
+    <Compile Include="Assets\Scripts\Plant\PlantsAb.cs" />
+    <Compile Include="Assets\Scripts\Zomby\Zombies.cs" />
+    <Compile Include="Assets\Scripts\TorchwoodControl.cs" />
+    <Compile Include="Assets\Scripts\CardSlot\CardControl.cs" />
+    <Compile Include="Assets\Scripts\Zomby\HeadDestroy.cs" />
+    <Compile Include="Assets\Scripts\LevelData.cs" />
+    <Compile Include="Assets\CardSlotsControl.cs" />
     <Compile Include="Assets\Scripts\Ultities\MonoSingleton.cs" />
-    <Compile Include="Assets\Scripts\SunFlower.cs" />
-    <Compile Include="Assets\Scripts\Factory.cs" />
-    <Compile Include="Assets\Scripts\PlantsAb.cs" />
-    <Compile Include="Assets\Scripts\PeaBulletComtrol.cs" />
+    <Compile Include="Assets\Scripts\Ignore\CardSlotsManager.cs" />
+    <Compile Include="Assets\Scripts\Bullet\BulletBase.cs" />
+    <Compile Include="Assets\Scripts\Plant\SunFlower.cs" />
+    <Compile Include="Assets\Scripts\Ultities\Factory.cs" />
+    <Compile Include="Assets\Scripts\Ignore\CardData.cs" />
+    <Compile Include="Assets\Scripts\AudioManager.cs" />
+    <Compile Include="Assets\Scripts\Bullet\PeaBulletComtrol.cs" />
+    <Compile Include="Assets\Scripts\Plant\SumControl.cs" />
+    <Compile Include="Assets\BackGroundSound.cs" />
     <Compile Include="Assets\Scripts\Test.cs" />
-    <Compile Include="Assets\SumControl.cs" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
+    <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
+    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
+    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
+    <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
+    <None Include="Assets\TextMesh Pro\Sprites\EmojiOne.json" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
     <Reference Include="UnityEngine">
       <HintPath>D:\Program Files\UnityHub\Unity\2022.3.38f1c1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
@@ -306,11 +343,11 @@
     <Reference Include="Unity.Collections.LowLevel.ILSupport">
       <HintPath>E:\UnityProgram\PlantsVSZombies\Library\PackageCache\com.unity.collections@1.2.4\Unity.Collections.LowLevel.ILSupport\Unity.Collections.LowLevel.ILSupport.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
-      <HintPath>E:\UnityProgram\PlantsVSZombies\Library\PackageCache\com.unity.visualscripting@1.9.4\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
-    </Reference>
     <Reference Include="DOTween">
       <HintPath>E:\UnityProgram\PlantsVSZombies\Assets\Plugins\Demigiant\DOTween\DOTween.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
+      <HintPath>E:\UnityProgram\PlantsVSZombies\Library\PackageCache\com.unity.visualscripting@1.9.4\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>D:\Program Files\UnityHub\Unity\2022.3.38f1c1\Editor\Data\NetStandard\ref\2.1.0\netstandard.dll</HintPath>
