制作了Load界面和部分Menu界面

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,28 +49,29 @@
     <Compile Include="Assets\Scripts\Plant\Pea.cs" />
     <Compile Include="Assets\Scripts\IPAttacked.cs" />
     <Compile Include="Assets\Scripts\Ultities\NewSingleton.cs" />
-    <Compile Include="Assets\GetFire.cs" />
     <Compile Include="Assets\Scripts\CardSlot\GetSunNum.cs" />
     <Compile Include="Assets\Scripts\Plant\PlantsAb.cs" />
-    <Compile Include="Assets\UIManager.cs" />
     <Compile Include="Assets\Scripts\Zomby\Zombies.cs" />
     <Compile Include="Assets\Scripts\TorchwoodControl.cs" />
     <Compile Include="Assets\Scripts\CardSlot\CardControl.cs" />
     <Compile Include="Assets\Scripts\Zomby\HeadDestroy.cs" />
     <Compile Include="Assets\Scripts\LevelData.cs" />
-    <Compile Include="Assets\CardSlotsControl.cs" />
+    <Compile Include="Assets\Scripts\start.cs" />
     <Compile Include="Assets\Scripts\Ultities\MonoSingleton.cs" />
+    <Compile Include="Assets\Scripts\GetFire.cs" />
     <Compile Include="Assets\Scripts\Ignore\CardSlotsManager.cs" />
+    <Compile Include="Assets\Scripts\CardSlotsControl.cs" />
+    <Compile Include="Assets\Scripts\BackGroundSound.cs" />
     <Compile Include="Assets\Scripts\Bullet\BulletBase.cs" />
     <Compile Include="Assets\Scripts\Plant\SunFlower.cs" />
     <Compile Include="Assets\Scripts\Ultities\Factory.cs" />
+    <Compile Include="Assets\Scripts\BoxControll.cs" />
     <Compile Include="Assets\Scripts\Ignore\CardData.cs" />
     <Compile Include="Assets\Scripts\AudioManager.cs" />
+    <Compile Include="Assets\Scripts\CardStart.cs" />
     <Compile Include="Assets\Scripts\Bullet\PeaBulletComtrol.cs" />
-    <Compile Include="Assets\BoxControll.cs" />
-    <Compile Include="Assets\CardStart.cs" />
+    <Compile Include="Assets\Scripts\UIManager.cs" />
     <Compile Include="Assets\Scripts\Plant\SumControl.cs" />
-    <Compile Include="Assets\BackGroundSound.cs" />
     <Compile Include="Assets\Scripts\Test.cs" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
